# repo-god

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
backend/: cli.py  main.py
deployments/automation/rg-support/: commands.txt  deploy-support.yml  postwork.yml  prework.yml
deployments/automation/rg-support/mongo/: deploy-mongo.yml  env.j2  secrets.yml
deployments/automation/rg-support/qdrant/: deploy-qdrant.yml
deployments/automation/rg-support/redis/: deploy-redis.yml  env.j2  redis.conf  secrets.yml
